# FNOT

./: Makefile  pyproject.toml  setup.cfg
.github/workflows/: workflow.yml
src/: runner.py  runner_builder.py  runner_inference.py
src/config/: .env  config.py
src/model/: model_builder.py  model_inference.py  model_service.py
src/model/models/: nifty50_lstm_v3.keras  nifty50_lstm_v3_scaler.joblib
src/model/pipeline/: collection.py  model.py  preparation.py
src/model/tuning_dir/lstm_tuning/: oracle.json
src/model/tuning_dir/lstm_tuning/trial_0/: checkpoint.weights.h5  trial.json
src/model/tuning_dir/lstm_tuning/trial_1/: checkpoint.weights.h5  trial.json
src/model/tuning_dir/lstm_tuning/trial_2/: checkpoint.weights.h5  trial.json
src/model/tuning_dir/lstm_tuning/trial_3/: checkpoint.weights.h5  trial.json
src/model/tuning_dir/lstm_tuning/trial_4/: checkpoint.weights.h5  trial.json
